fixed width of sidebar on smaller screen

--- a/css/non-index-style.css
+++ b/css/non-index-style.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: row-reverse;
     gap: 1rem;
+    max-width: 75%;
     div {
         display: flex;
         flex-direction: column;
